--- a/styles/globals.css
+++ b/styles/globals.css
@@ -9,8 +9,7 @@
         /* font-family: 'Roboto Mono', monospace; */
         /* font-family: 'Roboto', sans-serif; */
         /* font-family: 'Ubuntu', sans-serif; */
-        /* font-family: 'Noto Sans Mono', monospace; */
-        font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+        font-family: 'Noto Sans Mono', monospace;
         /* letter-spacing: 1px; */
         /* font-family: Proxima Nova, sans-serif; */
     }
