desgined-4-phone-done

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,15 +2,23 @@
 @tailwind components;
 @tailwind utilities;
 
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Mono:wght@500&family=Roboto+Mono:wght@200&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Mono:wght@500&family=Roboto+Mono:wght@200&display=swap'); */
+@import url('https://fonts.googleapis.com/css2?family=PT+Sans&display=swap');
 
 @layer base {
     html {
         /* font-family: 'Roboto Mono', monospace; */
         /* font-family: 'Roboto', sans-serif; */
         /* font-family: 'Ubuntu', sans-serif; */
-        font-family: 'Noto Sans Mono', monospace;
+        /* font-family: 'Noto Sans Mono', monospace; */
         /* letter-spacing: 1px; */
         /* font-family: Proxima Nova, sans-serif; */
+        font-family: 'PT Sans', sans-serif;
     }
   }
+
+/* @layer components {
+    .heroButton {
+        @apply px-6 py-2 border border-[#242424] rounded rounded-full text-xs uppercase tracking-widest text-gray-500 transition-all hover:border-[#242424]/40 hover: text-[#F7AB0A]/40
+    }
+} */
