--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,8 +7,6 @@
 /* @import url('https://fonts.googleapis.com/css2?family=PT+Sans&family=Source+Sans+Pro&display=swap'); */
 @import url('https://fonts.googleapis.com/css2?family=PT+Sans&family=PT+Serif&family=Source+Sans+Pro&display=swap');
 
-
-
 @layer base {
     html {
         /* font-family: 'Roboto Mono', monospace; */
@@ -18,11 +16,16 @@
         /* letter-spacing: 1px; */
         /* font-family: Proxima Nova, sans-serif; */
         /* font-family: 'PT Sans', sans-serif; */
-        /* font-family: 'Source Sans Pro', sans-serif; */
-        font-family: 'PT Serif', serif;
+        font-family: 'Source Sans Pro', sans-serif;
+        /* font-family: 'PT Serif', serif; */
 
     }
+
   }
+
+p {
+    @apply w-full text-lg leading-snug text-gray-600;
+}
 
 /* @layer components {
     .heroButton {
