--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,25 +6,26 @@
 /* @import url('https://fonts.googleapis.com/css2?family=PT+Sans&display=swap'); */
 /* @import url('https://fonts.googleapis.com/css2?family=PT+Sans&family=Source+Sans+Pro&display=swap'); */
 @import url('https://fonts.googleapis.com/css2?family=PT+Sans&family=PT+Serif&family=Source+Sans+Pro&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=PT+Sans&family=PT+Serif&family=Ubuntu:wght@300;400&display=swap'); */
 
 @layer base {
     html {
         /* font-family: 'Roboto Mono', monospace; */
         /* font-family: 'Roboto', sans-serif; */
-        /* font-family: 'Ubuntu', sans-serif; */
+        /* font-family: 'Ubuntu'; */
         /* font-family: 'Noto Sans Mono', monospace; */
         /* letter-spacing: 1px; */
         /* font-family: Proxima Nova, sans-serif; */
         /* font-family: 'PT Sans', sans-serif; */
         font-family: 'Source Sans Pro', sans-serif;
-        /* font-family: 'PT Serif', serif; */
+        /* font-family: 'PT Serif'; */
 
     }
 
   }
 
 p {
-    @apply w-full text-lg leading-snug text-gray-600;
+    @apply w-full text-base leading-snug text-gray-600 text-justify;
 }
 
 input, textarea {
