--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,35 +2,16 @@
 @tailwind components;
 @tailwind utilities;
 
-/* @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Mono:wght@500&family=Roboto+Mono:wght@200&display=swap'); */
-/* @import url('https://fonts.googleapis.com/css2?family=PT+Sans&display=swap'); */
-/* @import url('https://fonts.googleapis.com/css2?family=PT+Sans&family=Source+Sans+Pro&display=swap'); */
-@import url('https://fonts.googleapis.com/css2?family=PT+Sans&family=PT+Serif&family=Source+Sans+Pro&display=swap');
-/* @import url('https://fonts.googleapis.com/css2?family=PT+Sans&family=PT+Serif&family=Ubuntu:wght@300;400&display=swap'); */
-
 @layer base {
-    html {
-        /* font-family: 'Roboto Mono', monospace; */
-        /* font-family: 'Roboto', sans-serif; */
-        /* font-family: 'Ubuntu'; */
-        /* font-family: 'Noto Sans Mono', monospace; */
-        /* letter-spacing: 1px; */
-        /* font-family: Proxima Nova, sans-serif; */
-        /* font-family: 'PT Sans', sans-serif; */
-        font-family: 'Source Sans Pro', sans-serif;
-        /* font-family: 'PT Serif'; */
-
-    }
-
-  }
+    html {}
+}
 
 p {
     @apply w-full text-base leading-snug text-gray-600 text-justify;
 }
 
 input, textarea {
-    @apply border-2 border-gray-200 rounded-md px-2 py-1 text-gray-700 w-full;
-    @apply mb-2;
+    @apply border-2 border-gray-200 rounded-md px-2 py-1 text-gray-700 w-full mb-2;
 }
 
 input:focus, textarea:focus {
@@ -40,8 +21,11 @@ input:focus, textarea:focus {
 label {
     @apply text-gray-500;
 }
-/* @layer components {
+
+/* Disabled code
+@layer components {
     .heroButton {
-        @apply px-6 py-2 border border-[#242424] rounded rounded-full text-xs uppercase tracking-widest text-gray-500 transition-all hover:border-[#242424]/40 hover: text-[#F7AB0A]/40
+        @apply px-6 py-2 border border-[#242424] rounded rounded-full text-xs uppercase tracking-widest text-gray-500 transition-all hover:border-[#242424]/40 hover: text-[#F7AB0A]/40;
     }
-} */
+}
+*/
